# Engine

./: CMakeLists.txt
Benchmark/: CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt
Engine/headers/: _bitset2.hpp  bitset2.hpp
Engine/headers/bitset2_detail/: bitset2_impl.hpp
Engine/include/: archetype.hpp  component.hpp  entity.hpp  filter.hpp  hello.hpp  people.hpp  reflection.hpp  spot.hpp  system.hpp  table.hpp  world.hpp
Engine/src/: archetype.cpp  component.cpp  entity.cpp  hello.cpp  reflection.cpp  table.cpp  world.cpp
Game/: CMakeLists.txt
Game/src/: main.cpp
junk/: SerializationBase.hpp  schema.json  serialization.js
junk/backup/: reflection.hpp
